Adds in the receiver API

--- a/cast-of-things.html
+++ b/cast-of-things.html
@@ -56,6 +56,7 @@
             <div id="message" class="chromecast-msg"></div>
         </div>
     </div>
+    <script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type="text/javascript">
         // websocket stuffs....
         var host = location.origin.replace(/^http|file/, 'ws')
