--- a/cast-of-things.html
+++ b/cast-of-things.html
@@ -102,8 +102,7 @@
 
             // create a CastMessageBus to handle messages for a custom namespace
             window.messageBus =
-                window.castReceiverManager.getCastMessageBus(
-                    'urn:x-cast:com.google.cast.sample.helloworld');
+                window.castReceiverManager.getCastMessageBus('com.herokuapp.dougflip-chromecast');
 
             // handler for the CastMessageBus message event
             window.messageBus.onMessage = function(event) {
