Updates app id and namespace

--- a/cast-of-things-sender.html
+++ b/cast-of-things-sender.html
@@ -53,8 +53,8 @@ limitations under the License.
     </style>
     <script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
     <script type="text/javascript">
-        var applicationID = '2221006C';
-        var namespace = 'com.herokuapp.dougflip-chromecast';
+        var applicationID = '32BA06D5';
+        var namespace = 'urn:x-cast:com.herokuapp.dougflip-chromecast';
         var session = null;
 
         /**
