Changes namespace yet again

--- a/cast-of-things-sender.html
+++ b/cast-of-things-sender.html
@@ -54,7 +54,7 @@ limitations under the License.
     <script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
     <script type="text/javascript">
         var applicationID = '32BA06D5';
-        var namespace = 'urn:x-cast:com.herokuapp.dougflip-chromecast';
+        var namespace = 'urn:x-cast:com.herokuapp.dougflip';
         var session = null;
 
         /**
