--- a/cast-of-things.html
+++ b/cast-of-things.html
@@ -59,13 +59,13 @@
     <script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <script type="text/javascript">
         // websocket stuffs....
-        // var host = location.origin.replace(/^http|file/, 'ws')
-        // var ws = new WebSocket(host);
-        // ws.onmessage = updateCard;
-        //
-        // function updateCard(evt) {
-        //     document.getElementById('cardContent').innerHTML = evt.data;
-        // }
+        var host = location.origin.replace(/^http|file/, 'ws')
+        var ws = new WebSocket(host);
+        ws.onmessage = updateCard;
+
+        function updateCard(evt) {
+            document.getElementById('cardContent').innerHTML = evt.data;
+        }
 
 
         // chromecast stuffs
